Print Preview localization

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1517,16 +1517,17 @@ WindowAddUser.tag=Tag
 WindowAddUser.value=Value
 
 
+PrintSelectDialog.Print=Print
+PrintSelectDialog.Print_Preview=Print preview
+PrintSelectDialog.Preview=Preview
 
 
-Print_Preview=Print preview
-PRINT_TITLE=Print
-Select_the_print_area=Select the print area
-SQL_Query_Text_Area=SQL Query Text Area
-SQL_Table_Results_Panel=SQL Table Results Panel
-Preview=Preview
-Print=Print
-No_SQL_table_results=No SQL table results.
+PrintSelectDialog.Select_the_print_area=Select the print area
+PrintSelectDialog.SQL_Query_Text_Area=SQL Query Text Area
+PrintSelectDialog.SQL_Table_Results_Panel=SQL Table Results Panel
+PrintSelectDialog.No_SQL_table_results=No SQL table results.
+PrintSelectDialog.Cancel=Cancel
 
-
-Page_Setup=Page Setup
+PrintPreviewer.Print=Print
+PrintPreviewer.Page_Setup=Page Setup
+PrintPreviewer.Close=Close
