--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1517,16 +1517,17 @@ WindowAddUser.tag=Метка
 WindowAddUser.value=Значение
 
 
+PrintSelectDialog.Print=Печать
+PrintSelectDialog.Print_Preview=Предварительный просмотр
+PrintSelectDialog.Preview=Показать
 
+PrintSelectDialog.Select_the_print_area=Выберите область печати
+PrintSelectDialog.SQL_Query_Text_Area=SQL-запрос текстовой области
+PrintSelectDialog.SQL_Table_Results_Panel=SQL таблица
+PrintSelectDialog.Cancel=Отмена
 
-Print_Preview=Предварительный просмотр
-PRINT_TITLE=Печать
-Select_the_print_area=Выберите область печати
-SQL_Query_Text_Area=SQL-запрос текстовой области
-SQL_Table_Results_Panel=SQL таблица
-Preview=Показать
-Print=Печать
-No_SQL_table_results=SQL таблица не найдена.
+PrintSelectDialog.No_SQL_table_results=SQL таблица не найдена.
 
-
-Page_Setup=Настройка страницы
+PrintPreviewer.Print=Печать
+PrintPreviewer.Page_Setup=Настройка страницы
+PrintPreviewer.Close=Закрыть
