--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1534,18 +1534,24 @@ FindReplaceDialog.MatchCaseCheck=Match case
 FindReplaceDialog.WrapCheck=Wrap Search
 FindReplaceDialog.Replace=Replace
 FindReplaceDialog.RegularExpressions=Regular expressions
+SearchFilesDialog.FindAndReplace=Find and Replace
+SearchFilesDialog.WholeWordsCheck=Whole words only
+SearchFilesDialog.MatchCaseCheck=Match case
+SearchFilesDialog.WrapCheck=Wrap Search
+SearchFilesDialog.Replace=Replace
+SearchFilesDialog.RegularExpressions=Regular expressions
 FindReplaceDialog.SearchUp=Search Up
 FindReplaceDialog.SearchDown=Search Down
 FindReplaceDialog.ReplaceAll=Replace All
 FindReplaceDialog.FindText=Find Text
-message.FindReplaceDialog=The replacement text must be different to the find text.
-message.SearchFilesDialog.NotSelectedPath=You must select a search path
-message.SearchFilesDialog.ThePathNotExist=The path or file entered does not exist
+FindReplaceDialog.message=The replacement text must be different to the find text.
+SearchFilesDialog.message.NotSelectedPath=You must select a search path
+SearchFilesDialog.message.ThePathNotExist=The path or file entered does not exist
 SearchFilesDialog.FileTypes=File Types
 SearchFilesDialog.SearchPath=Search Path
-message.SearchSubdirectories=Search Subdirectories
-message.EnterSearchText=You must enter search text
-message.EnterReplaceText=You must enter replacement text
+SearchFilesDialog.message.seachSubdirsCheck=Search Subdirectories
+SearchFilesDialog.message.EnterSearchText=You must enter search text
+SearchFilesDialog.message.EnterReplaceText=You must enter replacement text
 ApplicationLauncher.console-UsingJavaVersion=Using Java version 
 ApplicationLauncher.console-JavaVersion=Java version
 ApplicationLauncher.console-RedExpertVersion=Red Expert version
