--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1534,18 +1534,24 @@ FindReplaceDialog.MatchCaseCheck=Учитывать регистр
 FindReplaceDialog.WrapCheck=Завершить поиск
 FindReplaceDialog.Replace=Заменить
 FindReplaceDialog.RegularExpressions=Регулярные выражения
+SearchFilesDialog.FindAndReplace=Найти и Заменить
+SearchFilesDialog.WholeWordsCheck=Только целые слова
+SearchFilesDialog.MatchCaseCheck=Учитывать регистр
+SearchFilesDialog.WrapCheck=Завершить поиск
+SearchFilesDialog.Replace=Заменить
+SearchFilesDialog.RegularExpressions=Регулярные выражения
 FindReplaceDialog.SearchUp=Поиск Вверх
 FindReplaceDialog.SearchDown=Поиск Вниз
 FindReplaceDialog.ReplaceAll=Замените Все
 FindReplaceDialog.FindText=Поиск текста
-message.FindReplaceDialog=Текст замены должен отличаться от текста поиска.
-message.SearchFilesDialog.NotSelectedPath=Вы должны указать путь
-message.SearchFilesDialog.ThePathNotExist=Введенный путь или файл не существует
+FindReplaceDialog.message=Текст замены должен отличаться от текста поиска.
+SearchFilesDialog.message.NotSelectedPath=Вы должны указать путь
+SearchFilesDialog.message.ThePathNotExist=Введенный путь или файл не существует
 SearchFilesDialog.FileTypes=Тип файла:
 SearchFilesDialog.SearchPath=Путь поиска:
-message.SearchSubdirectories=Поиск в подкаталогах
-message.EnterSearchText=Вы должны ввести текст для поиска
-message.EnterReplaceText=Вы должны ввести текст замены
+SearchFilesDialog.message.seachSubdirsCheck=Поиск в подкаталогах
+SearchFilesDialog.message.EnterSearchText=Вы должны ввести текст для поиска
+SearchFilesDialog.message.EnterReplaceText=Вы должны ввести текст замены
 ApplicationLauncher.console-UsingJavaVersion=Использование версии Java 
 ApplicationLauncher.console-JavaVersion=Версия Java
 ApplicationLauncher.console-RedExpertVersion=Версия Red Expert
