--- a/installer/localization/install_props_ru.lng
+++ b/installer/localization/install_props_ru.lng
@@ -1,1 +1,3 @@
 Installer.Parameter.question_remove_props=Желаете ли Вы также удалить пользовательские настройки?
+Installer.Parameter.association.title=Ассоциация файлов
+Installer.Parameter.association.body=Ассоциировать файлы .fdb с RedExpert?
