Implemented the function of importing data from a CSV files.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -181,6 +181,8 @@ action.help-command.description=Displays the help topics
 action.help-command=Help Topics
 action.import-connections-from-DB-command=Import Connections from DB
 action.import-connections-from-file-command=Import Connections from file
+action.import-data-from-file-command=Import data from file
+action.import-data-from-file-command.description=Import data into database from local files (*.csv, *.xlsx, ...)
 action.import-delimited-command=Import from Delimited File
 action.import-xml-command=Import from XML
 action.insert-row-command=Create a new table column after the current selection
@@ -1178,6 +1180,37 @@ HostPanel.DataTypes=Data Types
 HostPanel.DatabaseConnection=Database Connection
 HostPanel.DatabaseProperties=Database Properties
 HostPanel.SQLKeywords=SQL Keywords
+ImportDataFromFilePanel.Title=Import data 
+ImportDataFromFilePanel.SelectDelimiter=Select the delimiter
+ImportDataFromFilePanel.SelectFileType=Select the file type
+ImportDataFromFilePanel.SelectTable=Select the table
+ImportDataFromFilePanel.IsFirstColumnNamesText=Column names as first sources row
+ImportDataFromFilePanel.BrowseButtonText=Browse
+ImportDataFromFilePanel.ReadFileButtonText=Read File
+ImportDataFromFilePanel.FillMappingTableButtonText=Fill Mapping Table
+ImportDataFromFilePanel.StartImportButtonText=Import Data
+ImportDataFromFilePanel.TargetConnectionLabel=Target Connection:
+ImportDataFromFilePanel.TargetTableLabel=Target Table:
+ImportDataFromFilePanel.SourceTypeLabel=Source Type:
+ImportDataFromFilePanel.InputDataFileLabel=Input Data File:
+ImportDataFromFilePanel.DataDelimiterLabel=Data Delimiter:
+ImportDataFromFilePanel.FilePreviewLabel=Script executing log and columns mapping:
+ImportDataFromFilePanel.OpenFileDialogText=Select Import Data File Path
+ImportDataFromFilePanel.OpenFileDialogButton=Select
+ImportDataFromFilePanel.FileDoesNotExistMessage=The selected file does not exist:
+ImportDataFromFilePanel.NoFileSelectedMessage=No file selected
+ImportDataFromFilePanel.FileReadingErrorMessage=File reading error
+ImportDataFromFilePanel.ImportDataErrorMessage=Import data error
+ImportDataFromFilePanel.ColumnMappingTableTargetC=Target column
+ImportDataFromFilePanel.ColumnMappingTableTargetT=Target column type
+ImportDataFromFilePanel.ColumnMappingTableSource=Source column
+ImportDataFromFilePanel.SelectFileTypeMessage=Select file type firstly
+ImportDataFromFilePanel.ReadFileMessage=Read source file firstly
+ImportDataFromFilePanel.SelectTableMessage=Select the target table firstly
+ImportDataFromFilePanel.SelectDelimiterMessage=Select the delimiter firstly
+ImportDataFromFilePanel.NoSourceSelectedMessage=No source column selected in row 
+ImportDataFromFilePanel.FilePreviewText=Source file preview:
+ImportDataFromFilePanel.ImportedSuccessfullyText=Data import completed successfully
 ImportDelimitedCommand.title=Import Data
 ImportExportPanelFour.createTableStatementsCheck=Include CREATE TABLE statement
 ImportExportPanelFour.headerLabel=Enter any specific options for the generated files.
