--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -181,6 +181,8 @@ action.help-command.description=Отображает разделы справк
 action.help-command=Разделы справки
 action.import-connections-from-DB-command=Импорт подключений из Базы Данных
 action.import-connections-from-file-command=Импорт подключений из файла
+action.import-data-from-file-command=Импорт данных из файла
+action.import-data-from-file-command.description=Импорт данных из локального файла в БД (*.csv, *.xlsx, ...)
 action.import-delimited-command=Импорт из файла с разделителями
 action.import-xml-command=Импорт из XML
 action.insert-row-command=Создать новый столбец в таблице после выделенного
@@ -1178,6 +1180,37 @@ HostPanel.DataTypes=Типы Данных
 HostPanel.DatabaseConnection=Подключение к базе данных
 HostPanel.DatabaseProperties=Свойства базы данных
 HostPanel.SQLKeywords=Ключевые слова SQL
+ImportDataFromFilePanel.Title=Импорт данных 
+ImportDataFromFilePanel.SelectDelimiter=Выберете разделитель
+ImportDataFromFilePanel.SelectFileType=Выберете тип файла
+ImportDataFromFilePanel.SelectTable=Выберете целевую таблицу
+ImportDataFromFilePanel.IsFirstColumnNamesText=Заголовки столбцов как первая строка исходных данных
+ImportDataFromFilePanel.BrowseButtonText=Открыть Файл
+ImportDataFromFilePanel.ReadFileButtonText=Считать Файл
+ImportDataFromFilePanel.FillMappingTableButtonText=Заполнить Таблицу Сопоставлений
+ImportDataFromFilePanel.StartImportButtonText=Импортировать Данные
+ImportDataFromFilePanel.TargetConnectionLabel=Целевая БД:
+ImportDataFromFilePanel.TargetTableLabel=Целевая таблица:
+ImportDataFromFilePanel.SourceTypeLabel=Тип файла:
+ImportDataFromFilePanel.InputDataFileLabel=Путь к файлу:
+ImportDataFromFilePanel.DataDelimiterLabel=Разделитель:
+ImportDataFromFilePanel.FilePreviewLabel=Лог выполнения скрипта и таблица сопоставлений:
+ImportDataFromFilePanel.OpenFileDialogText=Выберете Импортируемый Файл
+ImportDataFromFilePanel.OpenFileDialogButton=Выбрать
+ImportDataFromFilePanel.FileDoesNotExistMessage=Выбранный файл не существует:
+ImportDataFromFilePanel.NoFileSelectedMessage=Файл не выбран
+ImportDataFromFilePanel.FileReadingErrorMessage=Ошибка чтения файла
+ImportDataFromFilePanel.ImportDataErrorMessage=Ошибка импорта данных
+ImportDataFromFilePanel.ColumnMappingTableTargetC=Целевой столбец
+ImportDataFromFilePanel.ColumnMappingTableTargetT=Тип целевого столбца
+ImportDataFromFilePanel.ColumnMappingTableSource=Столбец источника
+ImportDataFromFilePanel.SelectFileTypeMessage=Сначала выберете файл
+ImportDataFromFilePanel.ReadFileMessage=Сначала откройте файл
+ImportDataFromFilePanel.SelectTableMessage=Сначала выберете целевую таблицу
+ImportDataFromFilePanel.SelectDelimiterMessage=Сначала выберете разделитель
+ImportDataFromFilePanel.NoSourceSelectedMessage=Не выбран источник данных в строке 
+ImportDataFromFilePanel.FilePreviewText=Предпросмотр импортированного файла:
+ImportDataFromFilePanel.ImportedSuccessfullyText=Импортирование данных завершено успешно
 ImportDelimitedCommand.title=Импорт данных
 ImportExportPanelFour.createTableStatementsCheck=Включить CREATE TABLE запрос
 ImportExportPanelFour.headerLabel=Введите любые конкретные параметры для сгенерированных файлов.
