--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -726,6 +726,7 @@ BrowserTreePopupMenu.TRIGGER=trigger for table
 BrowserTreePopupMenu.USER=user
 BrowserTreePopupMenu.VIEW=view
 BrowserTreePopupMenu.addNewConnection=New Connection
+BrowserTreePopupMenu.active=Active
 BrowserTreePopupMenu.connect=Connect
 BrowserTreePopupMenu.connectText=Connect Data Source {0}
 BrowserTreePopupMenu.copyName=Copy Name
@@ -749,6 +750,7 @@ BrowserTreePopupMenu.exportSQL=Export as SQL
 BrowserTreePopupMenu.exportXml=Export to XML File
 BrowserTreePopupMenu.importDelimited=Import from Delimited File
 BrowserTreePopupMenu.importXml=Import from XML File
+BrowserTreePopupMenu.inactive=Inactive
 BrowserTreePopupMenu.insertStatement=INSERT statement
 BrowserTreePopupMenu.moveToFolder=Move to folder...
 BrowserTreePopupMenu.properties=Connection Properties
@@ -756,6 +758,7 @@ BrowserTreePopupMenu.recycle=Recycle this Connection
 BrowserTreePopupMenu.reload=Reload {0}
 BrowserTreePopupMenu.selectStatement=SELECT statement
 BrowserTreePopupMenu.switchDefaultCatalogAndSchemaDisplay=Show only default Catalog or Schema
+BrowserTreePopupMenu.switch=Switch
 BrowserTreePopupMenu.updateStatement=UPDATE statement
 BrowserTreePopupMenuActionListener.ExportData=Export Data
 BrowserTreePopupMenuActionListener.ImportData=Import Data
