--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -725,6 +725,7 @@ BrowserTreePopupMenu.TRIGGER=триггер
 BrowserTreePopupMenu.USER=пользователя
 BrowserTreePopupMenu.VIEW=представление
 BrowserTreePopupMenu.addNewConnection=Новое подключение
+BrowserTreePopupMenu.active=Включить
 BrowserTreePopupMenu.connect=Подключить
 BrowserTreePopupMenu.connectText=Подключитьcя к базе данных {0}
 BrowserTreePopupMenu.copyName=Копировать название
@@ -749,12 +750,14 @@ BrowserTreePopupMenu.exportXml=Экспорт в XML файл
 BrowserTreePopupMenu.importDelimited=Импорт из файла с разделителями
 BrowserTreePopupMenu.importXml=Импорт из XML
 BrowserTreePopupMenu.insertStatement=INSERT запрос
+BrowserTreePopupMenu.inactive=Выключить
 BrowserTreePopupMenu.moveToFolder=Переместить в папку...
 BrowserTreePopupMenu.properties=Свойства подключения
 BrowserTreePopupMenu.recycle=Переподключиться
 BrowserTreePopupMenu.reload=Перезагрузить {0}
 BrowserTreePopupMenu.selectStatement=SELECT запрос
 BrowserTreePopupMenu.switchDefaultCatalogAndSchemaDisplay=Показывать только стандартные каталог или схему
+BrowserTreePopupMenu.switch=Переключатель
 BrowserTreePopupMenu.updateStatement=UPDATE запрос
 BrowserTreePopupMenuActionListener.ExportData=Экспорт данных
 BrowserTreePopupMenuActionListener.ImportData=Импорт данных
