Modified and fixed the import function.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1194,9 +1194,9 @@ ImportDataFromFilePanel.TargetTableLabel=Target Table:
 ImportDataFromFilePanel.SourceTypeLabel=Source Type:
 ImportDataFromFilePanel.InputDataFileLabel=Input Data File:
 ImportDataFromFilePanel.DataDelimiterLabel=Data Delimiter:
-ImportDataFromFilePanel.FilePreviewLabel=Script executing log and columns mapping:
 ImportDataFromFilePanel.OpenFileDialogText=Select Import Data File Path
 ImportDataFromFilePanel.OpenFileDialogButton=Select
+ImportDataFromFilePanel.NoDataForImportMessage=No source selected for import
 ImportDataFromFilePanel.FileDoesNotExistMessage=The selected file does not exist:
 ImportDataFromFilePanel.NoFileSelectedMessage=No file selected
 ImportDataFromFilePanel.FileReadingErrorMessage=File reading error
@@ -1210,7 +1210,6 @@ ImportDataFromFilePanel.SelectTableMessage=Select the target table firstly
 ImportDataFromFilePanel.SelectDelimiterMessage=Select the delimiter firstly
 ImportDataFromFilePanel.NoSourceSelectedMessage=No source column selected in row 
 ImportDataFromFilePanel.FilePreviewText=Source file preview:
-ImportDataFromFilePanel.ImportedSuccessfullyText=Data import completed successfully
 ImportDelimitedCommand.title=Import Data
 ImportExportPanelFour.createTableStatementsCheck=Include CREATE TABLE statement
 ImportExportPanelFour.headerLabel=Enter any specific options for the generated files.
