--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -202,7 +202,7 @@ action.preferences-command=Preferences
 action.print-command=Print
 action.print-explained-plan-command=Print Explained Plan
 action.print-plan-command=Print Plan
-action.print-preview-command=Print Preview123
+action.print-preview-command=Print Preview
 action.redo-command.description=Redo the last action
 action.redo-command=Redo
 action.release-notes-command.description=RedExpert version release notes
@@ -1578,3 +1578,23 @@ FileChooserDialog.new-command.overwrite-file=Overwrite existing file?
 TableSelectionCombosGroup.error.selection-object=Error during database object selection
 ConnectionProgressDialog.connection-canceled=Connection cancelled
 DefaultStatementExecutor.table.invalid-name=Invalid table name
+BrowserTreePopupMenuActionListener.save-as.command=Select Output File Path
+BrowserTreePopupMenuActionListener.ConfirmCancelDialog=The selected file exists.\nOverwrite existing file?
+BrowserTreePopupMenuActionListener.ErrorMessage=Error writing output pane contents to file.\n
+QueryEditorResultsExporter.ExportQueryResults=Export Query Results
+QueryEditorResultsExporter.IncludeColumnNamesAsFirstRow=Include column names as first row
+QueryEditorResultsExporter.UseDoubleQuotesForChar/varchar/longvarcharColumns=Use double quotes for char/varchar/longvarchar columns
+QueryEditorResultsExporter.SelectTheExportTypeDelimiterAndFilePathBelow=Select the export type, delimiter and file path below.
+QueryEditorResultsExporter.FileFormat=File Format:
+QueryEditorResultsExporter.Delimiter=Delimiter:
+
+QueryEditorResultsExporter.Custom=Custom:
+QueryEditorResultsExporter.FilePath=File Path:
+QueryEditorResultsExporter.SelectExportFilePath=Select Export File Path
+QueryEditorResultsExporter.YouMustSpecifyAFileToExportTo=You must specify a file to export to.
+QueryEditorResultsExporter.YouMustEnterACustomDelimeter=You must enter a custom delimeter
+QueryEditorResultsExporter.ResultSetExportComplete=Result set export complete.
+QueryEditorResultsExporter.ErrorWritingToFile=Error writing to file:\n\n
+QueryEditorResultsExporter.Failed=failed
+QueryEditorResultsExporter.ExportingQueryResults=Exporting Query Results
+QueryEditorResultsExporter.ExportingResultSet=Exporting result set...
