--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1578,3 +1578,23 @@ FileChooserDialog.new-command.overwrite-file=Перезаписать сущес
 TableSelectionCombosGroup.error.selection-object=Ошибка при выборе объекта базы данных
 ConnectionProgressDialog.connection-canceled=Соединение отменено
 DefaultStatementExecutor.table.invalid-name=Недопустимое имя таблицы
+BrowserTreePopupMenuActionListener.save-as.command=Сохранить файл как
+BrowserTreePopupMenuActionListener.ConfirmCancelDialog=Выбранный файл существует. \nПерезаписать существующий файл?
+BrowserTreePopupMenuActionListener.ErrorMessage=Ошибка записи выходных данных в файл.\n
+QueryEditorResultsExporter.ExportQueryResults=Экспорт Результатов запроса
+QueryEditorResultsExporter.IncludeColumnNamesAsFirstRow=Включить имена столбцов в качестве первой строки
+QueryEditorResultsExporter.UseDoubleQuotesForChar/varchar/longvarcharColumns=Используйте двойные кавычки для столбцов char/varchar/longvarchar
+QueryEditorResultsExporter.SelectTheExportTypeDelimiterAndFilePathBelow=Выберите тип экспорта, разделитель и путь к файлу ниже.
+QueryEditorResultsExporter.FileFormat=Формат файла:
+QueryEditorResultsExporter.Delimiter=Ограничитель:
+
+QueryEditorResultsExporter.Custom=Пользовательский:
+QueryEditorResultsExporter.FilePath=Путь к файлу:
+QueryEditorResultsExporter.SelectExportFilePath=Выберите Путь к Файлу Экспорта
+QueryEditorResultsExporter.YouMustSpecifyAFileToExportTo=Вы должны указать файл для экспорта.
+QueryEditorResultsExporter.YouMustEnterACustomDelimeter=Вы должны ввести пользовательский разделитель
+QueryEditorResultsExporter.ResultSetExportComplete=Экспорт результирующего набора завершен.
+QueryEditorResultsExporter.ErrorWritingToFile=Ошибка записи в файл:\n\n
+QueryEditorResultsExporter.Failed=Неудачно
+QueryEditorResultsExporter.ExportingQueryResults=Экспорт результатов запроса
+QueryEditorResultsExporter.ExportingResultSet=Экспорт результирующего набора...
