Fix some problems, working at timestamp-converting

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1206,7 +1206,7 @@ ImportDataFromFilePanel.ColumnMappingTableTargetT=Тип целевого сто
 ImportDataFromFilePanel.ColumnMappingTableSource=Столбец источника
 ImportDataFromFilePanel.SelectFileTypeMessage=Сначала выберите файл
 ImportDataFromFilePanel.ReadFileMessage=Сначала откройте файл
-ImportDataFromFilePanel.SelectTableMessage=Сначала выбевыберитерете целевую таблицу
+ImportDataFromFilePanel.SelectTableMessage=Сначала выберите целевую таблицу
 ImportDataFromFilePanel.SelectDelimiterMessage=Сначала выберите разделитель
 ImportDataFromFilePanel.NoSourceSelectedMessage=Не выбран источник данных в строке 
 ImportDataFromFilePanel.FilePreviewText=Предпросмотр импортированного файла:
