add key translation

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1274,6 +1274,10 @@ NamedObject.TABLE_COLUMN=Table column
 NamedObject.TRIGGER=Triggers for Table
 NamedObject.USER=Users
 NamedObject.VIEW=Views
+NamedObject.PRIMARY_KEY=Primary keys
+NamedObject.FOREIGN_KEY=Foreign keys
+NamedObject.UNIQUE_KEY=Unique keys
+NamedObject.CHECK_KEY=Checks
 ObjectDefinitionPanel.DatabaseView=Database View
 OpenFrameCommand.error.notConnected=Not Connected.\nPlease connect to continue.
 PrintPreviewCommand.done=Done
