--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1274,6 +1274,10 @@ NamedObject.TABLE_COLUMN=Столбец таблицы
 NamedObject.TRIGGER=Триггеры
 NamedObject.USER=Пользователи
 NamedObject.VIEW=Представления
+NamedObject.PRIMARY_KEY=Первичные ключи
+NamedObject.FOREIGN_KEY=Внешние ключи
+NamedObject.UNIQUE_KEY=Уникальные ключи
+NamedObject.CHECK_KEY=Проверочные ограничения
 ObjectDefinitionPanel.DatabaseView=Представление
 OpenFrameCommand.error.notConnected=Не подключено.\nПожалуйста подключитесь для продолжения.
 PrintPreviewCommand.done=Готово
