Fix timestamp data importing. Redesigned the import process. Added field for choice timestamp format.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -181,7 +181,7 @@ action.help-command.description=Displays the help topics
 action.help-command=Help Topics
 action.import-connections-from-DB-command=Import Connections from DB
 action.import-connections-from-file-command=Import Connections from file
-action.import-data-from-file-command=Import data from file
+action.import-data-from-file-command=Import Data From File
 action.import-data-from-file-command.description=Import data into database from local files (*.csv, *.xlsx, ...)
 action.import-delimited-command=Import from Delimited File
 action.import-xml-command=Import from XML
@@ -1184,6 +1184,7 @@ ImportDataFromFilePanel.Title=Import data
 ImportDataFromFilePanel.SelectDelimiter=Select the delimiter
 ImportDataFromFilePanel.SelectFileType=Select the file type
 ImportDataFromFilePanel.SelectTable=Select the table
+ImportDataFromFilePanel.SelectTimeFormat=Select source date/time format
 ImportDataFromFilePanel.IsFirstColumnNamesText=Column names as first sources row
 ImportDataFromFilePanel.BrowseButtonText=Browse
 ImportDataFromFilePanel.ReadFileButtonText=Read File
@@ -1195,10 +1196,13 @@ ImportDataFromFilePanel.SourceTypeLabel=Source Type:
 ImportDataFromFilePanel.InputDataFileLabel=Input Data File:
 ImportDataFromFilePanel.DataDelimiterLabel=Data Delimiter:
 ImportDataFromFilePanel.OpenFileDialogText=Select Import Data File Path
+ImportDataFromFilePanel.DateFormatLabel=Select Date/Time format
 ImportDataFromFilePanel.OpenFileDialogButton=Select
 ImportDataFromFilePanel.NoDataForImportMessage=No source selected for import
 ImportDataFromFilePanel.FileDoesNotExistMessage=The selected file does not exist:
 ImportDataFromFilePanel.NoFileSelectedMessage=No file selected
+ImportDataFromFilePanel.NoTimeFormatSelectedMessage=No date/time format selected
+ImportDataFromFilePanel.NoFileTypeSelectedMessage=No file type selected
 ImportDataFromFilePanel.FileReadingErrorMessage=File reading error
 ImportDataFromFilePanel.ImportDataErrorMessage=Import data error
 ImportDataFromFilePanel.ColumnMappingTableTargetC=Target column
