--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -181,7 +181,7 @@ action.help-command.description=Отображает разделы справк
 action.help-command=Разделы справки
 action.import-connections-from-DB-command=Импорт подключений из Базы Данных
 action.import-connections-from-file-command=Импорт подключений из файла
-action.import-data-from-file-command=Импорт данных из файла
+action.import-data-from-file-command=Импорт Данных из Файла
 action.import-data-from-file-command.description=Импорт данных из локального файла в БД (*.csv, *.xlsx, ...)
 action.import-delimited-command=Импорт из файла с разделителями
 action.import-xml-command=Импорт из XML
@@ -1184,6 +1184,7 @@ ImportDataFromFilePanel.Title=Импорт данных
 ImportDataFromFilePanel.SelectDelimiter=Выберите разделитель
 ImportDataFromFilePanel.SelectFileType=Выберите тип файла
 ImportDataFromFilePanel.SelectTable=Выберите целевую таблицу
+ImportDataFromFilePanel.SelectTimeFormat=Выберете формат даты/времени
 ImportDataFromFilePanel.IsFirstColumnNamesText=Заголовки столбцов как первая строка исходных данных
 ImportDataFromFilePanel.BrowseButtonText=Открыть Файл
 ImportDataFromFilePanel.ReadFileButtonText=Считать Файл
@@ -1194,11 +1195,14 @@ ImportDataFromFilePanel.TargetTableLabel=Целевая таблица:
 ImportDataFromFilePanel.SourceTypeLabel=Тип файла:
 ImportDataFromFilePanel.InputDataFileLabel=Путь к файлу:
 ImportDataFromFilePanel.DataDelimiterLabel=Разделитель:
+ImportDataFromFilePanel.DateFormatLabel=Формат Даты/Времени
 ImportDataFromFilePanel.OpenFileDialogText=Выберите Импортируемый Файл
 ImportDataFromFilePanel.OpenFileDialogButton=Выбрать
 ImportDataFromFilePanel.NoDataForImportMessage=Не выбраны источники данных для импорта
 ImportDataFromFilePanel.FileDoesNotExistMessage=Выбранный файл не существует:
 ImportDataFromFilePanel.NoFileSelectedMessage=Файл не выбран
+ImportDataFromFilePanel.NoTimeFormatSelectedMessage=Формат даты/времени не выбран
+ImportDataFromFilePanel.NoFileTypeSelectedMessage=Тип файла не выбран
 ImportDataFromFilePanel.FileReadingErrorMessage=Ошибка чтения файла
 ImportDataFromFilePanel.ImportDataErrorMessage=Ошибка импорта данных
 ImportDataFromFilePanel.ColumnMappingTableTargetC=Целевой столбец
