1.improve the layout of elements in the trace manager 2.make selected visible columns saved

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1462,6 +1462,7 @@ TraceManagerPanel.UseConfigFile=Use Config File
 TraceManagerPanel.User=User
 TraceManagerPanel.Username=User name
 TraceManagerPanel.VisibleColumns=Visible Columns
+TraceManagerPanel.Logger=Logger
 TraceManagerPanel.title=Trace Manager
 UserManagerPanel.Add=Add
 UserManagerPanel.AddRole=Add role
