--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1462,6 +1462,7 @@ TraceManagerPanel.UseConfigFile=Использовать файл конфигу
 TraceManagerPanel.User=Пользователь
 TraceManagerPanel.Username=Имя пользователя
 TraceManagerPanel.VisibleColumns=Видимые столбцы
+TraceManagerPanel.Logger=Журнал
 TraceManagerPanel.title=Трейс менеджер
 UserManagerPanel.Add=Добавить
 UserManagerPanel.AddRole=Добавить роль
