--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -757,7 +757,7 @@ BrowserTreePopupMenu.recycle=Переподключиться
 BrowserTreePopupMenu.reload=Перезагрузить {0}
 BrowserTreePopupMenu.selectStatement=SELECT запрос
 BrowserTreePopupMenu.switchDefaultCatalogAndSchemaDisplay=Показывать только стандартные каталог или схему
-BrowserTreePopupMenu.switch=Переключатель
+BrowserTreePopupMenu.switch=Активность
 BrowserTreePopupMenu.updateStatement=UPDATE запрос
 BrowserTreePopupMenuActionListener.ExportData=Экспорт данных
 BrowserTreePopupMenuActionListener.ImportData=Импорт данных
