Added new functions, fix some problems. Read more below. 1 - added logging the module processing to the output console 2 - added selection of the number of records, after which the transaction commit will be performed 3 - added selection the range of records to be imported 4 - start redesigning the appearance of the module workspace

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1186,17 +1186,18 @@ ImportDataFromFilePanel.SelectFileType=Select the file type
 ImportDataFromFilePanel.SelectTable=Select the table
 ImportDataFromFilePanel.SelectTimeFormat=Select source date/time format
 ImportDataFromFilePanel.IsFirstColumnNamesText=Column names as first sources row
+ImportDataFromFilePanel.IsEraseDatabaseText=Erase database table before import
 ImportDataFromFilePanel.BrowseButtonText=Browse
 ImportDataFromFilePanel.ReadFileButtonText=Read File
 ImportDataFromFilePanel.FillMappingTableButtonText=Fill Mapping Table
 ImportDataFromFilePanel.StartImportButtonText=Import Data
-ImportDataFromFilePanel.TargetConnectionLabel=Target Connection:
-ImportDataFromFilePanel.TargetTableLabel=Target Table:
-ImportDataFromFilePanel.SourceTypeLabel=Source Type:
-ImportDataFromFilePanel.InputDataFileLabel=Input Data File:
-ImportDataFromFilePanel.DataDelimiterLabel=Data Delimiter:
+ImportDataFromFilePanel.TargetConnectionLabel=Target connection/table:
+ImportDataFromFilePanel.InputDataFileLabel=Source data file:
+ImportDataFromFilePanel.PropertiesLabel=Import properties & settings:
+ImportDataFromFilePanel.DelimiterAndTimeFormatLabel=Delimiter and time format:
+ImportDataFromFilePanel.NumericSelectorsLabel=First/last imported line:
+ImportDataFromFilePanel.CommitSelectorLabel=Commit step:
 ImportDataFromFilePanel.OpenFileDialogText=Select Import Data File Path
-ImportDataFromFilePanel.DateFormatLabel=Select Date/Time format
 ImportDataFromFilePanel.OpenFileDialogButton=Select
 ImportDataFromFilePanel.NoDataForImportMessage=No source selected for import
 ImportDataFromFilePanel.FileDoesNotExistMessage=The selected file does not exist:
@@ -1205,6 +1206,8 @@ ImportDataFromFilePanel.NoTimeFormatSelectedMessage=No date/time format selected
 ImportDataFromFilePanel.NoFileTypeSelectedMessage=No file type selected
 ImportDataFromFilePanel.FileReadingErrorMessage=File reading error
 ImportDataFromFilePanel.ImportDataErrorMessage=Import data error
+ImportDataFromFilePanel.DateTimeFormatErrorMessage=Unable to convert date to specified format
+ImportDataFromFilePanel.EraseDatabaseErrorMessage=Erasing database table error
 ImportDataFromFilePanel.ColumnMappingTableTargetC=Target column
 ImportDataFromFilePanel.ColumnMappingTableTargetT=Target column type
 ImportDataFromFilePanel.ColumnMappingTableSource=Source column
