Redesigned module GUI, improved the principle of converting time-type data.

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1184,19 +1184,28 @@ ImportDataFromFilePanel.Title=Импорт данных
 ImportDataFromFilePanel.SelectDelimiter=Выберите разделитель
 ImportDataFromFilePanel.SelectFileType=Выберите тип файла
 ImportDataFromFilePanel.SelectTable=Выберите целевую таблицу
-ImportDataFromFilePanel.SelectTimeFormat=Выберете формат даты/времени
-ImportDataFromFilePanel.IsFirstColumnNamesText=Заголовки столбцов как первая строка исходных данных
+ImportDataFromFilePanel.SelectTimeFormat=Выберете формат времени
+ImportDataFromFilePanel.SelectDateFormat=Выберете формат даты
+ImportDataFromFilePanel.SelectTimestampDelimiterFormat=Выберете разделитель даты/времени
+ImportDataFromFilePanel.IsFirstColumnNamesText=Первая строка заголовки столбцов источника
 ImportDataFromFilePanel.IsEraseDatabaseText=Очистить таблицу перед вставкой
 ImportDataFromFilePanel.BrowseButtonText=Открыть Файл
 ImportDataFromFilePanel.ReadFileButtonText=Считать Файл
 ImportDataFromFilePanel.FillMappingTableButtonText=Заполнить Таблицу Сопоставлений
 ImportDataFromFilePanel.StartImportButtonText=Импортировать Данные
-ImportDataFromFilePanel.TargetConnectionLabel=Целевая БД/таблица:
+ImportDataFromFilePanel.TargetConnectionLabel=Целевая БД:
+ImportDataFromFilePanel.TargetTableLabel=Целевая таблица:
 ImportDataFromFilePanel.InputDataFileLabel=Путь к файлу:
-ImportDataFromFilePanel.DelimiterAndTimeFormatLabel=Разделитель и формат даты:
-ImportDataFromFilePanel.NumericSelectorsLabel=Первая/последняя импортируемая строка:
+ImportDataFromFilePanel.DelimiterLabel=Разделитель:
+ImportDataFromFilePanel.TimeFormatLabel=Паттерн времени:
+ImportDataFromFilePanel.DateFormatLabel=Паттерн даты:
+ImportDataFromFilePanel.TimestampDelimiterLabel=Разделитель даты/времени:
+ImportDataFromFilePanel.FirstNumericSelectorsLabel=Первая импортируемая строка:
+ImportDataFromFilePanel.LastNumericSelectorsLabel=Последняя импортируемая строка:
 ImportDataFromFilePanel.CommitSelectorLabel=Шаг коммита:
+ImportDataFromFilePanel.ImportFileTypeLabel=Тип файла:
 ImportDataFromFilePanel.PropertiesLabel=Свойства и настройки импорта:
+ImportDataFromFilePanel.ImportPropertiesLabel=Свойства импорта:
 ImportDataFromFilePanel.OpenFileDialogText=Выберите Импортируемый Файл
 ImportDataFromFilePanel.OpenFileDialogButton=Выбрать
 ImportDataFromFilePanel.NoDataForImportMessage=Не выбраны источники данных для импорта
