--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1184,19 +1184,28 @@ ImportDataFromFilePanel.Title=Import data
 ImportDataFromFilePanel.SelectDelimiter=Select the delimiter
 ImportDataFromFilePanel.SelectFileType=Select the file type
 ImportDataFromFilePanel.SelectTable=Select the table
-ImportDataFromFilePanel.SelectTimeFormat=Select source date/time format
-ImportDataFromFilePanel.IsFirstColumnNamesText=Column names as first sources row
-ImportDataFromFilePanel.IsEraseDatabaseText=Erase database table before import
+ImportDataFromFilePanel.SelectTimeFormat=Select time format
+ImportDataFromFilePanel.SelectDateFormat=Select date format
+ImportDataFromFilePanel.SelectTimestampDelimiterFormat=Select timestamp delimiter
+ImportDataFromFilePanel.IsFirstColumnNamesText=Source columns names as first row
+ImportDataFromFilePanel.IsEraseDatabaseText=Erase table before import
 ImportDataFromFilePanel.BrowseButtonText=Browse
 ImportDataFromFilePanel.ReadFileButtonText=Read File
 ImportDataFromFilePanel.FillMappingTableButtonText=Fill Mapping Table
 ImportDataFromFilePanel.StartImportButtonText=Import Data
-ImportDataFromFilePanel.TargetConnectionLabel=Target connection/table:
+ImportDataFromFilePanel.TargetConnectionLabel=Target connection:
+ImportDataFromFilePanel.TargetTableLabel=Target table:
 ImportDataFromFilePanel.InputDataFileLabel=Source data file:
 ImportDataFromFilePanel.PropertiesLabel=Import properties & settings:
-ImportDataFromFilePanel.DelimiterAndTimeFormatLabel=Delimiter and time format:
-ImportDataFromFilePanel.NumericSelectorsLabel=First/last imported line:
+ImportDataFromFilePanel.DelimiterLabel=Delimiter:
+ImportDataFromFilePanel.TimeFormatLabel=Time pattern:
+ImportDataFromFilePanel.DateFormatLabel=Date pattern:
+ImportDataFromFilePanel.TimestampDelimiterLabel=Timestamp delimiter:
+ImportDataFromFilePanel.FirstNumericSelectorsLabel=First row:
+ImportDataFromFilePanel.LastNumericSelectorsLabel=Last row:
+ImportDataFromFilePanel.ImportFileTypeLabel=File type:
 ImportDataFromFilePanel.CommitSelectorLabel=Commit step:
+ImportDataFromFilePanel.ImportPropertiesLabel=Import properties:
 ImportDataFromFilePanel.OpenFileDialogText=Select Import Data File Path
 ImportDataFromFilePanel.OpenFileDialogButton=Select
 ImportDataFromFilePanel.NoDataForImportMessage=No source selected for import
