Added "Select all indexes/triggers" item to the context menu. Added new methods "selectAll" and "selectNodes"

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -756,6 +756,8 @@ BrowserTreePopupMenu.moveToFolder=Move to folder...
 BrowserTreePopupMenu.properties=Connection Properties
 BrowserTreePopupMenu.recycle=Recycle this Connection
 BrowserTreePopupMenu.reload=Reload {0}
+BrowserTreePopupMenu.selectAllTriggers=Select all triggers
+BrowserTreePopupMenu.selectAllIndexes=Select all indexes
 BrowserTreePopupMenu.selectStatement=SELECT statement
 BrowserTreePopupMenu.switchDefaultCatalogAndSchemaDisplay=Show only default Catalog or Schema
 BrowserTreePopupMenu.switch=Active
