--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -756,6 +756,8 @@ BrowserTreePopupMenu.properties=Свойства подключения
 BrowserTreePopupMenu.recycle=Переподключиться
 BrowserTreePopupMenu.reload=Перезагрузить {0}
 BrowserTreePopupMenu.selectStatement=SELECT запрос
+BrowserTreePopupMenu.selectAllTriggers=Выбрать все триггеры
+BrowserTreePopupMenu.selectAllIndexes=Выбрать все индексы
 BrowserTreePopupMenu.switchDefaultCatalogAndSchemaDisplay=Показывать только стандартные каталог или схему
 BrowserTreePopupMenu.switch=Активность
 BrowserTreePopupMenu.updateStatement=UPDATE запрос
