Changed the appearance of data export

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1594,6 +1594,8 @@ QueryEditorResultsExporter.FileFormat=File Format:
 QueryEditorResultsExporter.Delimiter=Delimiter:
 
 QueryEditorResultsExporter.Custom=Custom:
+QueryEditorResultsExporter.SQLExport=How save SQL query:
+QueryEditorResultsExporter.TableName=Table name:
 QueryEditorResultsExporter.FilePath=File Path:
 QueryEditorResultsExporter.SelectExportFilePath=Select Export File Path
 QueryEditorResultsExporter.YouMustSpecifyAFileToExportTo=You must specify a file to export to.
