Reworked source data preview area according to the sample component in the IBExpert.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1206,6 +1206,7 @@ ImportDataFromFilePanel.LastNumericSelectorsLabel=Last row:
 ImportDataFromFilePanel.ImportFileTypeLabel=File type:
 ImportDataFromFilePanel.CommitSelectorLabel=Commit step:
 ImportDataFromFilePanel.ImportPropertiesLabel=Import properties:
+ImportDataFromFilePanel.PreviewAndColumnMappingTablesLabel=Preview/ColumnMapping tables:
 ImportDataFromFilePanel.OpenFileDialogText=Select Import Data File Path
 ImportDataFromFilePanel.OpenFileDialogButton=Select
 ImportDataFromFilePanel.NoDataForImportMessage=No source selected for import
