--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1206,6 +1206,7 @@ ImportDataFromFilePanel.CommitSelectorLabel=Шаг коммита:
 ImportDataFromFilePanel.ImportFileTypeLabel=Тип файла:
 ImportDataFromFilePanel.PropertiesLabel=Свойства и настройки импорта:
 ImportDataFromFilePanel.ImportPropertiesLabel=Свойства импорта:
+ImportDataFromFilePanel.PreviewAndColumnMappingTablesLabel=Таблица предпросмотра данных / Таблица сопоставления:
 ImportDataFromFilePanel.OpenFileDialogText=Выберите Импортируемый Файл
 ImportDataFromFilePanel.OpenFileDialogButton=Выбрать
 ImportDataFromFilePanel.NoDataForImportMessage=Не выбраны источники данных для импорта
