Localized export for SQL

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1595,6 +1595,8 @@ QueryEditorResultsExporter.Delimiter=Delimiter:
 
 QueryEditorResultsExporter.Custom=Custom:
 QueryEditorResultsExporter.SQLExport=How save SQL query:
+QueryEditorResultsExporter.SQLInFile=Text file
+QueryEditorResultsExporter.SQLQueryEditor=Query Editor
 QueryEditorResultsExporter.TableName=Table name:
 QueryEditorResultsExporter.FilePath=File Path:
 QueryEditorResultsExporter.SelectExportFilePath=Select Export File Path
