--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1595,6 +1595,8 @@ QueryEditorResultsExporter.Delimiter=Разделитель:
 
 QueryEditorResultsExporter.Custom=Пользовательский:
 QueryEditorResultsExporter.SQLExport=Как сохранить SQL запрос:
+QueryEditorResultsExporter.SQLInFile=В текстовый файл
+QueryEditorResultsExporter.SQLQueryEditor=Редактор запроса
 QueryEditorResultsExporter.TableName=Имя таблицы:
 QueryEditorResultsExporter.FilePath=Путь к файлу:
 QueryEditorResultsExporter.SelectExportFilePath=Выберите Путь к Файлу Экспорта
